Fix explain checkbox alignment to match search buttons

--- a/src/css/navbar.less
+++ b/src/css/navbar.less
@@ -26,6 +26,11 @@
         body.section-document & { display: block; }
     }
 
+    // Explain checkbox should be aligned with buttons
+    .form-actions label {
+        margin-top: 15px;
+    }
+
     // keep breadcrumb segments from leaking if they're too long
     .nav-section > a {
         html.textoverflow & {
